<resources>
    <string name="app_name">login</string><!-- *******************************************************************************************
                                      LOGIN - START
    *********************************************************************************************-->

    <string name="login_title">Sign in</string>
    <string name="login_submit">Submit</string>
    <string name="login_create_new_account"><u>Create new account ?</u></string>

    <string name="login_form_label_email">EMAIL</string>
    <string name="login_form_label_password">PASSWORD</string>

    <string name="login_form_hint_email">ENTER YOUR EMAIL</string>
    <string name="login_form_hint_password">ENTER YOUR PASSWORD</string>

    <string name="login_custom_error_message">User Authentication is Failed</string>


    <!-- *******************************************************************************************
                                      LOGIN - START
    *********************************************************************************************-->



    <!-- *******************************************************************************************
                                VERIFY PASSWORD - START
    ******************************************************************************************** -->

    <!-- PAGE TITLE -->
    <string name="verify_password_page_title">VERIFY PASSWORD</string>

    <string name="verify_password_password_field_label">PASSWORD</string>
    <string name="verify_password_submit_button_text">LOGIN</string>
    <string name="verify_password_forgot_password_label"><u>Forgot Password</u></string>

    <string name="verify_password_authentication_error">Swivel News application was unable to authenticate with server. Please contact YouCab customer care.</string>


    <!-- *******************************************************************************************
                                 VERIFY PASSWORD - END
     ******************************************************************************************* -->

    <!-- *******************************************************************************************
                                FORGOT PASSWORD OPTION - START
    ******************************************************************************************** -->

    <!-- PAGE TITLE -->
    <string name="forgot_password_option_page_title">FORGOT PASSWORD</string>
    <string name="forgot_password_get_verification_code_label">GET YOUR VERIFICATION CODE</string>
    <string name="forgot_password_option_submit_button_text">NEXT</string>


    <!-- *******************************************************************************************
                                 FORGOT PASSWORD OPTION - END
     ******************************************************************************************* -->
</resources>
