<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="viewModel"
                  type="com.swivel.login.ui.verify_password.VerifyPasswordViewModel"/>

        <variable
                name="forData"
                type="com.swivel.login.ui.verify_password.VerifyPasswordFormData" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_main_bg">

        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/v_16"
                android:layout_marginTop="@dimen/v_32"
                app:layout_constraintStart_toStartOf="@id/start_margin_guideline"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/verify_password_page_title"
                tools:text="Password Verification"
                style="@style/pageTitleWhite"/>

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/v_0"
                app:srcCompat="@drawable/ic_app_logo"
                app:layout_constraintDimensionRatio="H,2137:398"
                app:layout_constraintBottom_toTopOf="@id/topHorizontalGuideline"
                android:layout_marginStart="@dimen/v_32"
                android:layout_marginEnd="@dimen/v_32"
                />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/topHorizontalGuideline"
                android:layout_width="match_parent"
                android:layout_height="@dimen/v_1"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.33"
                />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/numberFieldHorizontalGuideline"
                android:layout_width="match_parent"
                android:layout_height="@dimen/v_1"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5"
                />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_margin_guideline"
                android:layout_width="@dimen/v_0"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/v_16"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_margin_guideline"
                android:layout_width="@dimen/v_0"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/v_16"
            />

        <TextView
                android:id="@+id/enterMobileNumberLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/labelWhite"
                app:layout_constraintTop_toTopOf="@id/numberFieldHorizontalGuideline"
                app:layout_constraintStart_toStartOf="@id/start_margin_guideline"
                tools:text="ENTER YOUR PASSWORD"
                android:text="@string/verify_password_password_field_label"
                />

        <EditText
                android:id="@+id/passwordEditText"
                style="@style/defaultEditTextField"
                android:layout_width="match_parent"
                android:layout_height="@dimen/v_0"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="20"
                app:layout_constraintTop_toBottomOf="@id/enterMobileNumberLabel"
                android:layout_marginStart="@dimen/v_16"
                android:layout_marginEnd="@dimen/v_16"
                android:layout_marginTop="@dimen/v_16"
                android:text="@={forData.password}"
                tools:text="*********"
                onEditorEnterAction="@{viewModel.passwordDone}"
                />

        <TextView
                android:id="@+id/forgotPasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textButtonGray"
                tools:text="Forgot Password"
                android:text="@string/verify_password_forgot_password_label"
                app:layout_constraintEnd_toEndOf="@id/end_margin_guideline"
                app:layout_constraintTop_toBottomOf="@id/passwordEditText"
                android:layout_marginTop="@dimen/v_24"
                android:onClick="@{(v) -> viewModel.onTapForgotPassword(v)}"
                />

        <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verify_password_submit_button_text"
                tools:text="Login"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/BrownBarButtonStyle"
                android:onClick="@{(v) -> viewModel.onTapSubmit(v)}"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>