<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="viewModel"
                type="com.swivel.login.ui.forgot_password_option.ForgotPasswordOptionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_main_bg">

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_margin_guideline"
                android:layout_width="@dimen/v_0"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/v_16"
                />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_margin_guideline"
                android:layout_width="@dimen/v_0"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/v_16"
            />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/topHorizontalGuideline"
                android:layout_width="match_parent"
                android:layout_height="@dimen/v_0"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.33"
            />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/optionsStartingGuideline"
                android:layout_width="match_parent"
                android:layout_height="@dimen/v_0"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.45"
            />


        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/v_16"
                android:layout_marginTop="@dimen/v_32"
                app:layout_constraintStart_toStartOf="@id/start_margin_guideline"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/forgot_password_option_page_title"
                tools:text="Forgot Password"
                style="@style/pageTitleWhite"/>

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/v_0"
                app:srcCompat="@drawable/ic_app_logo"
                app:layout_constraintDimensionRatio="H,2137:398"
                app:layout_constraintBottom_toTopOf="@id/topHorizontalGuideline"
                android:layout_marginStart="@dimen/v_32"
                android:layout_marginEnd="@dimen/v_32"
                />

        <TextView
                android:id="@+id/getVerificationCodeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/pageSubTitleWhite"
                app:layout_constraintTop_toTopOf="@id/optionsStartingGuideline"
                app:layout_constraintStart_toStartOf="@id/start_margin_guideline"
                tools:text="GET YOUR VERIFICATION CODE"
                android:text="@string/forgot_password_get_verification_code_label"
                />

        <RadioGroup
                android:layout_width="@dimen/v_0"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/getVerificationCodeLabel"
                android:layout_marginTop="@dimen/v_24"
                app:layout_constraintStart_toEndOf="@id/start_margin_guideline"
                app:layout_constraintEnd_toStartOf="@id/end_margin_guideline">

            <RadioButton
                    android:id="@+id/optionEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    style="@style/whiteRadiioButtonStyle"
                    tools:text="y*******@gmail.com"
                    />

            <RadioButton
                    android:id="@+id/optionPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    style="@style/whiteRadiioButtonStyle"
                    tools:text="+94715134121"
                    />
        </RadioGroup>

        <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_option_submit_button_text"
                tools:text="Next"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/GreenBarButtonStyle"
                android:onClick="@{(v) -> viewModel.onTapSubmit(v)}"
                />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>